# flood-fill-cuda

./: .gitignore  EVOLUTION_ROADMAP.md  README.md  old_gpu.txt  organize_branches.sh  pyproject.toml  run.ipynb
.github/: copilot-commit-message-instructions.md  copilot-instructions.md
graveyard/: gpu_two_pass.py  optimized_solution.py  organize_branches.sh  test2.py
notebooks/: cpu_cuda_flood_fill.ipynb  gpu_cuda_flood_fill_new.ipynb
src/cpu/: getting_started_with_numba.py  sequential.py
src/gpu/: bfs_only.py  bfs_plus_scan.py  bfs_single_pass.py  getting_started_with_numba.py  getting_started_with_numba_gpu.py  scan_only.py
src/gpu/single_blob/: multi_blocks.py  multi_blocks_simple.py  single_block.py
src/gpu/single_blob/multi-blocks/: OPTIMIZATION_RESULTS.md  __init__.py  analyze_expanded_results.py  analyze_results.py  analyze_results_simple.py  benchmark_optimizer.py  cleanup_directory.py  configure_gpu.py  create_milestones.py  debug_logging.py  final_summary.py  kernels.py  kernels_fixed.py  main.py  main_optimized.py  setup.py  test_fixed.py  test_new_optimal_config.py  test_optimal_config.py  utils.py
src/gpu/single_blob/multi-blocks/benchmark_results/: analysis_summary.json  cuda_flood_fill_benchmark.csv  final_optimization_summary.json  new_optimal_config_validation.json  optimal_config_test.json
utils/: cuda_diagnostic.py  generate_blobs_image.py  generate_blocks_image.py  get_info.py
